tests/paczka1/fuzzy1/65741639.err
Error in line 12: S476 A264 32,15
Error in line 7: Lsodt S476 90,8
Error in line 5: S476 A264 35,3
Error in line 32: tRG1SHx7u S476 46,5
Error in line 35: bDCYJs S47 27,7
Error in line 24: Cb4tqT S476 96,9
